Change title from 'Space Nitro' to 'Astro Dodger'

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Space Nitro - Converted from CMU CS Academy</title>
+<title>Astro Dodger</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <style>
 :root{/*width:450px;*//*height:400px*/}
