--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ canvas{display:block; width:100%; height:100%; background:transparent}
     <div class="powerBarBg"></div>
     <div id="powerBar" class="powerBar" style="width:400px"></div>
   </div>
-  <div class="footer">Converted — CMU CS Academy → HTML5 Canvas</div>
+  <div class="footer"></div>
   <div class="gameOver" id="gameOver">Game Over</div>
 </div>
 
