--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ canvas{display:block; width:100%; height:100%; background:transparent}
 </style>
 </head>
 <body>
+  <h1>ASTRO-DODGER</h1>
+  <h3>"r" to restart</h3>
 <div class="container" id="gameContainer">
   <canvas id="gameCanvas" width="450" height="400"></canvas>
   <div class="hud">
