Add restart instructions to footer
Updated footer to include restart instructions.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@ canvas{display:block; width:100%; height:100%; background:transparent}
 </head>
 <body>
   <h1>ASTRO-DODGER</h1>
-  <h3>"r" to restart</h3>
 <div class="container" id="gameContainer">
   <canvas id="gameCanvas" width="450" height="400"></canvas>
   <div class="hud">
@@ -40,7 +39,7 @@ canvas{display:block; width:100%; height:100%; background:transparent}
     <div class="powerBarBg"></div>
     <div id="powerBar" class="powerBar" style="width:400px"></div>
   </div>
-  <div class="footer"></div>
+  <div class="footer">Nitro Bar, ("r" to restart when you die or if you want to)</div>
   <div class="gameOver" id="gameOver">Game Over</div>
 </div>
 
