--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 body{background:linear-gradient(135deg,#000,#0b0011 40%, #3b0f6b 70%, #fff 100%);display:flex;align-items:center;justify-content:center;height:100vh;margin:0;font-family:Inter,Arial,Helvetica,sans-serif;color:#fff}
 .container{width:400px;height:400px;position:relative;box-shadow:0 10px 40px rgba(0,0,0,.6);border-radius:6px;overflow:hidden;background:transparent}
 canvas{display:block; width:100%; height:100%; background:transparent}
+.title{top:-20px}
 .hud{position:absolute;left:0;right:0;top:0;pointer-events:none;padding:8px;display:flex;align-items:center;justify-content:space-between}
 .hud .left{display:flex;align-items:center;gap:10px}
 .label{font-size:16px}
@@ -24,7 +25,7 @@ canvas{display:block; width:100%; height:100%; background:transparent}
 </style>
 </head>
 <body>
-  <h1>ASTRO-DODGER</h1>
+  <h1 class="title" >ASTRO-DODGER</h1>
 <div class="container" id="gameContainer">
   <canvas id="gameCanvas" width="450" height="400"></canvas>
   <div class="hud">
