Update favicon link in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <title>Astro Dodger</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" href="your_favicon.ico" type="image/x-icon">
+<link rel="icon" href="your-favicon.png" type="image/x-icon">
 <style>
 :root{/*width:450px;*//*height:400px*/}
 body{background:linear-gradient(135deg,#000,#0b0011 40%, #3b0f6b 70%, #fff 100%);display:flex;align-items:center;justify-content:center;height:100vh;margin:0;font-family:Inter,Arial,Helvetica,sans-serif;color:#fff}
